[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "langchain[anthropic,google-genai,openai]>=1.0.5",
    "python-dotenv>=1.2.1",
]
